# ftp_alg-santa-challenge

./: README.md  check.py  requirements.txt  solve.py
data/: sample_submission.csv
solution/: pyproject.toml
solution/solution/: bearing.csv  santa-challenge.ipynb  santa-challenge.nbconvert.ipynb  test.csv
solution/tests/: test_solution.py
