[tool.poetry]
name = "solution"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
haversine = "^2.5.1"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
nbconvert = "^6.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
